--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,8 @@ derive-new = "0.5.8"
 
 [build-dependencies]
 tonic-build = "0.2"
+
+[dev-dependencies.cargo-husky]
+version = "1.4.0"
+default-features = false
+features = ["user-hooks"]
