--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ env_logger = "0.7.1"
 anyhow = "1.0.27"
 thiserror = "1.0.15"
 derive-new = "0.5.8"
+async-trait = "0.1.30"
 
 [build-dependencies]
 tonic-build = "0.2"
