--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -7,3 +7,6 @@ update_configs:
       - match:
           dependency_type: "development"
           update_type: "all"
+      - match:
+          dependency_type: "production"
+          update_type: "semver:patch"
