--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ thiserror = "1.0.16"
 derive-new = "0.5.8"
 async-trait = "0.1.30"
 boolinator = "2.4.0"
+derive_more = "0.99.5"
 
 [build-dependencies]
 tonic-build = "0.2"
