refactor: mod ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,3 +12,5 @@ jobs:
       - run: cargo fmt -- --check
       - run: cargo audit
       - run: cargo test
+      - run: docker-compose up -d
+      - run: cargo test -- --ignored
