refactor: mod ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,9 @@ jobs:
           path: ~/.rustup/toolchains
           key: ${{ runner.os }}-cargo-toolchains-${{ hashFiles('**/rust-toolchain') }}
       - run: rustup component add clippy rustfmt && cargo install cargo-audit
-      - run: cargo clippy -- -D warnings
+      - run: sudo chown -R $(whoami):$(id -ng) ~/.cargo/
       - run: cargo fmt -- --check
+      - run: cargo clippy -- -D warnings
       - run: cargo audit
       - run: cargo test
       - run: docker-compose up -d
