--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: sudo mkdir ~/.cargo && sudo chown -R $(whoami):$(id -ng) ~/.cargo/
+      - run: sudo mkdir -p ~/.cargo && sudo chown -R $(whoami):$(id -ng) ~/.cargo/
       - uses: actions/cache@v1
         with:
           path: ~/.cargo
