--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ envconfig_derive = "0.8.0"
 
 [dev-dependencies]
 dotenv = "0.15.0"
+assert_cmd = "1.0.1"
+predicates = "1.0.4"
 
 [dev-dependencies.cargo-husky]
 version = "1.4.0"
